# 3D-Computer-Vision-Project

./: .gitignore  DLT_calibration_boxes.py  README.md  TODO.md  camera_calibration.py  camera_calibration_dlt.py  camera_calibration_zhang.py  checkerboard_detection.py  demo.ipynb  extrinsics.py  intrinsics.py  main.py  object_detection.md  object_detection.py  pyproject.toml  requirements.txt  robot_control.py  test.ipynb  walktrough.ipynb
src/: camera_calibration_dlt.py  checkerboard_detection.py  extrinsics.py  intrinsics.py  main.py  object_detection.py
test-images/intrinsics-4/: IMG_4141.HEIC  IMG_4142.HEIC  IMG_4143.HEIC  IMG_4144.HEIC  IMG_4145.HEIC  IMG_4146.HEIC  IMG_4147.HEIC
test-images/set4/: dlt_points.json
